# reasonkit-core

./: .dockerignore  .gitattributes  .gitignore  .~lock.CLAUDE.md#  API_DOCUMENTATION.md  ARCHITECTURE.md  AUDIT_REPORT_2025-12-31.md  BRAND.md  CHANGELOG.md  CICD_IMPLEMENTATION.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPILATION_STATUS.md  CONTRIBUTING.md  CRATES_IO_READINESS_REPORT.md  CRATES_IO_VALIDATION_REPORT.md  Cargo.toml  Dockerfile  GETTING_STARTED.md  HACKTOBERFEST.md  MCP_API_REFERENCE.md  PUBLICATION_GUIDE.md  QA_PLAN.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.1.0.md  REVIEW_PROTOCOL.md  SECURITY.md  SUPPORT.md  VALIDATION_REPORT_2025-12-30.md  WEB_INTERFACE_IMPLEMENTATION.md  cliff.toml  demo_self_query.sh  deny.toml  docker-compose.prod.yml  docker-compose.yml  justfile  pyproject.toml  test_import.py
.cargo/: config.toml
.claude/memories/: project_memory.json
.github/: CODEOWNERS  GOOD_FIRST_ISSUES.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.md
.github/agents/: HANDOFF_PROTOCOL.md  LOADER.md  MAIN.md  README.md  architect.agent.md  devops-sre.agent.md  manifest.json  python-specialist.agent.md  rust-engineer.agent.md  security-guardian.agent.md  task-master.agent.md
.github/workflows/: README.md  benchmark.yml  (+7 more)
TASKS/: docs-refactor.md
agents/: mega-scale-agent-architecture.md  wsop-multi-agent-framework.md
assets/: terminal_screenshot.txt
benches/: README.md  embedding_bench.rs  fusion_bench.rs  glm46_benchmark.rs  harness.rs  hybrid_search_bench.rs  ingestion_bench.rs  qdrant_optimization_bench.rs  raptor_bench.rs  rerank_bench.rs  retrieval_bench.rs  thinktool_bench.rs  vector_search_bench.rs
benchmarks/: BASELINE_MEASUREMENTS.md  README.md  gsm8k_eval.rs  variance_benchmark.py  variance_benchmark_claude.py  variance_benchmark_multi.py
brand/: BRAND_PLAYBOOK.md  COMMUNITY_BADGES.md  README.md  REASONTERMINAL_STARSHIP.toml  REASONUI_COMPONENT_SPEC.md  WEBSITE_ARCHITECTURE_ANALYSIS.md
config/: cli_defaults.toml  default.toml  monitored_sources.json
docs/: ABSOLUTE_REASONING_GUIDE.md  ADVANCED_REASONING_FRAMEWORKS_RESEARCH.md  API_RATE_LIMITING.md  API_REFERENCE.md  API_VERSIONING_STRATEGY.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM_PROMPTS.md  ARCHITECTURE_QUICK_REFERENCE.md  BENCHMARKS.md  BENCHMARK_REPRODUCTION.md  BENCHMARK_SUITE_DESIGN.md  BENCHMARK_VALIDATION_GUIDE.md  CLI_COOKBOOK.md  CLI_REFERENCE.md  CLI_WORKFLOW_EXAMPLES.md  CONCEPTS.md  CONTENT_MARKETING_STRATEGY.md  CONTRIBUTOR_QUICKSTART.md  CRATES_IO_PUBLICATION_GUIDE.md  CUSTOM_THINKTOOLS.md  DEPLOYMENT.md  DEPLOYMENT_IMPLEMENTATION_PLAN.md  DEPLOYMENT_QUICK_REFERENCE.md  DOCUMENTATION_INDEX.md  ERROR_TRACKING_SETUP.md  EXPANDED_PROVIDER_RESEARCH.md  FEATURE_FLAG_SYSTEM.md  GIT_HISTORY_SECURITY_AUDIT.md  IMAGE_GENERATION_PROMPTS.md  INSTALLATION_TROUBLESHOOTING.md  INTEGRATION.md  INTEGRATION_TEST_PLAN.md  ITPE_IMPLEMENTATION_COMPLETE.md  LLM_CLI_INTEGRATION.md  LLM_PROVIDER_INTEGRATION_PROPOSAL.md  M2_INTEGRATION_ARCHITECTURE.md  MAINTENANCE.md  MCP_BEST_PRACTICES_2025.md  MCP_EXECUTIVE_SUMMARY.md  MCP_SERVER.md  (+39 more)
examples/: README.md  aesthetic_demo.rs  glm46_quick_start.rs  langchain_integration.md  m2_integration_example.rs  main_demo.rs  memory_interface_usage.rs  memory_service_example.rs  powercombo.rs  protocol_delta_demo.rs  quick-start-core.rs  rk_langchain_agent.py  simple_query.rs  vibe_quick_start.rs  web_adapter_example.rs  web_adapter_integration.rs  ws_mcp_server.rs
legacy/: ARCHIVING_PLAN.md  README.md
legacy/arf-platform/: Cargo.toml
legacy/arf-platform/arf-cli/: Cargo.toml
legacy/arf-platform/arf-cli/src/: main.rs
legacy/arf-platform/arf-core/: Cargo.toml
legacy/arf-platform/arf-core/src/: config.rs  engine.rs  error.rs  ipc.rs  lib.rs  logging.rs  plugins.rs  runtime.rs  state.rs  types.rs
legacy/arf-platform/arf-plugins/: Cargo.toml
legacy/arf-platform/arf-plugins/src/: lib.rs
legacy/rust-core/rust-core/: Cargo.toml  build.sh
legacy/rust-core/rust-core/src/: lib.rs  metrics.rs  protocol.rs  validation.rs
protocols/: README.md  VERBOSE_THINKING_PATTERNS.md  WEB_SEARCH_OPTIMIZATION_PROTOCOL.md  WSOP_EXECUTIVE_SUMMARY.md  deep_research_protocols_v2.yaml  profiles.yaml  profiles_v2.yaml  proofguard-deep-research-protocol.yaml  thinktool_prompt_templates.yaml  thinktools.yaml  thinktools_v2.yaml  web-search-optimization-protocol.yaml  wsop-edge-cases.md  wsop-gigathink-implementations.md  wsop-implementation-specs.md
schemas/: ABSOLUTE_REASONING_ENGINE.json  chain_of_thought_v3_lite.json  document.schema.json  documentation_sources.json  master_paper_sources.json  mcp.json  paper_sources.json
scripts/: create_baseline.sh  download_all_papers.sh  download_papers.sh  index_documentation.sh  install-rk-commands.sh  install.sh  install_cli_defaults.sh  quality-check.sh  quality_metrics.sh  rk-bh  rk-cli-wrapper.sh  rk-dive  rk-think  rk-web  run_benchmarks.sh  setup_llm_cli.sh  sync-brand-to-site.sh  update-mem-dependency.sh  validate-brand-assets.sh  validate_benchmarks.sh  verify-ci-cd.sh
shell/: README.md
src/: bindings.rs  error.rs  lib.rs  main.rs  memory_interface.rs  migrations.rs  raptor.rs  raptor_optimized.rs  web_interface.rs
templates/: llm_templates.yaml
tests/: GLM46_TEST_SUITE_STATUS.md  aesthetic_module_tests.rs  cross_crate_integration_tests.rs  executor_unit_tests.rs  glm46_integration_tests.rs  glm46_performance_validation.rs  glm46_unit_tests.rs  ingest_workflow_e2e_test.rs  m2_connector_tests.rs  mcp_testing_strategy.rs  ollama_cloud_smoke_test.rs  proptest_invariants.rs  proptest_thinktool.rs  protocol_e2e_tests.rs  reasoning_prop_tests.proptest-regressions  reasoning_prop_tests.rs  storage_integration_tests.rs  storage_unit_tests.rs  stress_mcp_server_tests.rs  stress_thinktool_tests.rs  telemetry_comprehensive_tests.rs  telemetry_trace_logging.rs  test_minimax_m2_integration.rs  thinktool_integration_tests.rs  thinktool_unit_tests.rs  trait_integration.rs  verification_integration.rs  web_search_optimization_tests.py
(+360 files in other folders)
