[package]
name = "reasonkit-core"
version = "0.1.3"
edition = "2021"
rust-version = "1.75"
authors = ["ReasonKit Team <team@reasonkit.sh>"]
description = "The Reasoning Engine — Auditable Reasoning for Production AI | Rust-Native | Turn Prompts into Protocols"
license = "Apache-2.0"
repository = "https://github.com/reasonkit/reasonkit-core"
homepage = "https://reasonkit.sh"
documentation = "https://docs.rs/reasonkit-core"
readme = "README.md"
keywords = ["rag", "llm", "reasoning", "knowledge-base", "ai"]
categories = ["command-line-utilities", "science", "algorithms", "development-tools"]

# Exclude large/unnecessary files from crates.io package
# Using include list for explicit control over package contents
include = [
    "/src/**/*",
    "/benches/**/*",
    "/examples/**/*",
    "/config/default.toml",
    "/config/cli_defaults.toml",
    "/protocols/**/*",
    "/.cargo/config.toml",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/SECURITY.md",
]

# Exclude patterns (redundant with include, but explicit for clarity)
exclude = [
    "/assets/**/*",
    "/docs/**/*",
    "/scripts/**/*",
    "/benchmarks/**/*",
    "*.png",
    "*.svg",
    "*.jpg",
    "*.gif",
]

[package.metadata.docs.rs]
# Don't use all-features (python/arf/local-embeddings require system deps not in docs.rs)
features = ["cli"]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "reasonkit"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
# Disable doctests to avoid compile-only example drift across feature sets
doctest = false

[[bin]]
name = "rk"
path = "src/main.rs"

[[bin]]
name = "rk-compare"
path = "src/bin/compare.rs"

[[bin]]
name = "rk-bench"
path = "src/bin/bench.rs"

[[example]]
name = "vibe_quick_start"
path = "examples/vibe_quick_start.rs"
required-features = ["vibe"]

[[example]]
name = "aesthetic_demo"
path = "examples/aesthetic_demo.rs"
required-features = ["aesthetic"]

[[example]]
name = "m2_integration_example"
path = "examples/m2_integration_example.rs"
required-features = ["minimax"]

[[example]]
name = "glm46_quick_start"
path = "examples/glm46_quick_start.rs"
required-features = ["glm46"]

# ============================================================================
# DEPENDENCIES
# ============================================================================

[dependencies]
# Python Integration (0.24+ supports Python 3.13) - optional
pyo3 = { version = "0.24.1", features = ["extension-module"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
base64 = "0.22"
web-sys = { version = "0.3.83", features = ["ReadableStream"] }

# PDF Processing
lopdf = "0.33"

# Text Processing
pulldown-cmark = "0.10"
scraper = "0.18"
regex = "1.10"

# Vector Database (optional - use reasonkit-mem for full memory features)
qdrant-client = { version = "1.10", optional = true }

# Full-text Search (optional - use reasonkit-mem for full memory features)
tantivy = { version = "0.25", optional = true }

# Memory Infrastructure (optional - provides storage, retrieval, embeddings)
# Version required for crates.io publishing; path used for workspace development
reasonkit-mem = { version = "0.1.1", optional = true }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Additional async utilities
futures = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3", features = ["std"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json", "stream"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4.5"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# Logging & Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Cryptographic hashing for telemetry and caching
sha2 = "0.10"

# SQLite for local telemetry storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Configuration
config = "0.14"
dotenvy = "0.15"
toml = "0.9"
num_cpus = "1.16"

# JSON Schema Validation
jsonschema = "0.18"

# File watching (for hot reload)
notify = "6.1"

# Rayon for parallel processing
rayon = "1.10"

# Lazy initialization
once_cell = "1.19"

# Progress bars & Console
indicatif = "0.17"
console = { version = "0.16", features = ["std"] }

# Directories
directories = "5"
dirs = "5"
walkdir = "2.4"

# ONNX Runtime for local embeddings (BGE-M3)
ort = { version = "2.0.0-rc.10", optional = true }

# HuggingFace tokenizers
tokenizers = { version = "0.19", optional = true }

# NDArray for tensor operations (needed by ONNX)
ndarray = { version = "0.15", optional = true }

# ARF Module dependencies (optional feature)
sled = { version = "0.34", optional = true }
wasmtime = { version = "24.0.5", optional = true }
sysinfo = { version = "0.30", optional = true }
petgraph = { version = "0.6", optional = true, features = ["serde-1"] }
rust-bert = { version = "0.23", optional = true, features = ["download-libtorch", "hf-tokenizers"], default-features = false }
parking_lot = { version = "0.12", optional = true }
md5 = { version = "0.7", optional = true }  # For aesthetic engine config hashing

# ============================================================================
# DEV DEPENDENCIES
# ============================================================================

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
futures = "0.3"
# Property-based testing for comprehensive fuzzing and invariant verification
proptest = "1.4"

# ============================================================================
# BENCHMARKS
# ============================================================================

[[bench]]
name = "retrieval_bench"
harness = false
required-features = ["memory"]

[[bench]]
name = "fusion_bench"
harness = false
required-features = ["memory"]

[[bench]]
name = "embedding_bench"
harness = false
required-features = ["memory"]

[[bench]]
name = "raptor_bench"
harness = false
required-features = ["memory"]

[[bench]]
name = "ingestion_bench"
harness = false
required-features = ["memory"]

[[bench]]
name = "rerank_bench"
harness = false
required-features = ["memory"]

[[bench]]
name = "thinktool_bench"
harness = false

[[bench]]
name = "harness"
harness = false
required-features = ["memory"]

[[bench]]
name = "glm46_benchmark"
harness = false
required-features = ["glm46"]

# ============================================================================
# FEATURES
# ============================================================================

[features]
# Default feature set for general use
default = ["cli"]

# CLI binary support
cli = []

# Python bindings via PyO3
python = ["pyo3"]

# EXPERIMENTAL: VIBE Protocol Validation System
# Status: Incomplete - do not use in production
vibe = []

# Embedded Qdrant mode (no external server required)
embedded-qdrant = []

# Local BGE-M3 ONNX embeddings (no API calls needed)
local-embeddings = ["ort", "tokenizers", "ndarray"]

# ARF (Autonomous Reasoning Framework) module
arf = ["sled", "wasmtime", "sysinfo", "petgraph", "rust-bert", "parking_lot"]

# Memory infrastructure via reasonkit-mem (vector storage, hybrid search, RAPTOR)
memory = ["dep:reasonkit-mem", "dep:qdrant-client", "dep:tantivy"]

# EXPERIMENTAL: Multi-language code intelligence
# Status: Incomplete - do not use in production
code-intelligence = []

# EXPERIMENTAL: MiniMax M2 enhanced ThinkTools
# Status: Incomplete - do not use in production
minimax = []

# EXPERIMENTAL: GLM-4.6 integration module
# Status: Incomplete - do not use in production
glm46 = []

# Aesthetic Expression Mastery System - M2-enhanced UI/UX assessment
aesthetic = ["md5"]

# Full feature set (excludes experimental)
full = ["cli", "memory", "local-embeddings", "aesthetic"]
