[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "reasonkit"
version = "1.0.0"
description = "High-performance AI reasoning engine for Python, built in Rust."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["ai", "reasoning", "agent", "rust", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.maturin]
features = ["pyo3/extension-module"]
