# ReasonKit Core - Python Bindings via PyO3 + Maturin
#
# Build Commands (use UV, not pip):
#   uv pip install maturin       # Install maturin
#   maturin develop --release    # Dev install to current venv
#   maturin build --release      # Build wheel for distribution
#
# Usage:
#   from reasonkit import Reasoner, Profile, run_gigathink
#
#   # Quick usage
#   result = run_gigathink("Analyze market trends")
#
#   # Full control
#   r = Reasoner()
#   result = r.think_with_profile(Profile.Balanced, "Should we pivot?")

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "reasonkit"
version = "0.1.0"
description = "ReasonKit - Turn Prompts into Protocols. Structured AI Reasoning with ThinkTools."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [
    { name = "ReasonKit Team", email = "team@reasonkit.sh" }
]
maintainers = [
    { name = "ReasonKit Team", email = "team@reasonkit.sh" }
]
keywords = [
    "ai",
    "reasoning",
    "llm",
    "thinking",
    "protocols",
    "thinktools",
    "rust",
    "pyo3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
# No runtime dependencies - pure Rust extension
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://reasonkit.sh"
Documentation = "https://docs.rs/reasonkit-core"
Repository = "https://github.com/reasonkit/reasonkit-core"
Changelog = "https://github.com/reasonkit/reasonkit-core/blob/main/CHANGELOG.md"
Issues = "https://github.com/reasonkit/reasonkit-core/issues"

[tool.maturin]
# Python module name (matches #[pymodule] fn reasonkit)
module-name = "reasonkit"
# Rust features to enable for Python build
features = ["cli"]
# Build in release mode by default
profile = "release"
# Target Python 3.9+
python-source = false
# Strip debug symbols for smaller wheels
strip = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["reasonkit"]
