[workspace]
members = [
    "arf-core",
    "arf-cli",
    "arf-plugins"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AGENTICORCHESTRA DevOps Swarm"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/agentiorchestra/arf-platform"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI framework
clap = { version = "4.4", features = ["derive"] }

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Search and fuzzy finding
skim = "0.10"
walkdir = "2.4"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# WebAssembly runtime
wasmtime = "20.0"

# Development tools
cargo_metadata = "0.18"

# Utilities
ulid = "1.1"

# Local crates
arf-core = { path = "arf-core" }