[package]
name = "arf-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arf-core.workspace = true

# Async runtime
tokio.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI framework
clap.workspace = true

# TUI
ratatui.workspace = true
crossterm.workspace = true

# Search and fuzzy finding
skim.workspace = true
walkdir.workspace = true

# HTTP client
reqwest.workspace = true

# Development tools
cargo_metadata.workspace = true

[[bin]]
name = "arf"
path = "src/main.rs"